[package]
name = "mortar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
emojis = "0.6.1"
fancy-regex = "0.13.0"
nom = "7.1.3"
nom-regex = "0.2.0"
normalize-path = "0.2.1"
rayon = "1.7.0"
regex = "1.9.4"
rhai = "1.15.1"
unicode-segmentation = "1.10.1"
uuid = {version = "1.6.1", features=["v4"]}
walkdir = "2.3.3"

[lib]
